# QTNMSensitivities

./: .gitignore  CMakeLists.txt  CRLBSensitivities.ipynb  README.md
QTNMSensitivities (CMW - Python)/: NMsensitivities.ipynb  NeutrinoMass.py
src/: CMakeLists.txt
src/Experiment/: CMakeLists.txt  Experiment.cpp  SystematicEffect.cpp
src/Experiment/include/: Experiment.h  SystematicEffect.h
src/Formatting/: CMakeLists.txt  Formatting.cpp
src/Formatting/include/: Formatting.h
src/include/: CommonNumbers.h  FundamentalConstants.h
src/test/: CMakeLists.txt  DopplerBroadening.cpp  Project8Sensitivities.cpp  StatsOnly.cpp  TestSensitivity.cpp  WhitePaperPlots.cpp
